kubernetes/apps/asteria-back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asteria-back
  namespace: asteria-jdr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asteria-back
  template:
    metadata:
      labels:
        app: asteria-back
    spec:
      containers:
      - name: asteria-back
        image: docker.io/library/asteria-jdr-back:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: asteria-back
  namespace: asteria-jdr
spec:
  selector:
    app: asteria-back
  ports:
  - port: 80
    targetPort: 3000
