kubernetes/apps/asteria-front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asteria-front
  namespace: asteria-jdr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: asteria-front
  template:
    metadata:
      labels:
        app: asteria-front
    spec:
      containers:
      - name: asteria-front
        image: docker.io/library/asteria-jdr-front:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: asteria-front
  namespace: asteria-jdr
spec:
  selector:
    app: asteria-front
  ports:
  - port: 80
    targetPort: 80
