kubernetes/apps/grafana-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.zoom2604.dev`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
  tls:
    certResolver: letsencrypt
