kubernetes/apps/uptime-kuma-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.zoom2604.dev`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
  tls:
    certResolver: letsencrypt
